--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Ücretsiz Hesap</title>
-    <link rel="stylesheet" href="style.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8028548434043759"
-     crossorigin="anonymous"></script>
+    <link  rel="stylesheet" href="style.css" rel="jaava" href="script.js">
 </head>
 <body>
+  <footer class="footer">
+  <p>&copy; Made By Berta</p>
+      </footer>
    <div class="container">
     <div class="navbar">
         <div class="ucretsizhesap">
-            <a href="">🌐Ücretsiz Hesap</a>
+            <a href="">Ücretsiz Hesap</a>
         </div>
         <input type="checkbox" id="menuBtn">
         <label for="menuBtn" class="menuBtn">
             ≡
         </label>
         <ul>
-            <li><a href="anasayfa.html" class="active">⌂ Ana Sayfa</a></li>
+            <li><a href="anasayfa.html" class="active"></i>⌂ Ana Sayfa</a></li>
             <li><a href="disney.html" >Disney</a></li>
             <li><a href="netflix.html" >Netflix</a></li>
             <li><a href="method.html" >Method</a></li>
@@ -33,6 +34,7 @@
             <li><b>Paylaşılan hesaplara sağ üst köşedeki "Disney","Netflix","Method" ve daha</b></li>
             <li><b> fazla içerikleri görebilmek için karışık seçeneğine tıklayınız.</b></li>
             <li><b>İYİ FORUMLAR :D</b></li>
+
         </ol>
     </div>
 
@@ -41,6 +43,7 @@
         <div class="ol">
             <p>Hesaplarin güncel olup olmadiini anlamak için yanindaki belirttiğimiz "**/**/**/ kısmından anlıyabilirsiniz.</p>
     </div>
+
 </body>
 </html> 
 
