--- a/method.html
+++ b/method.html
@@ -11,7 +11,7 @@
    <div class="container">
     <div class="navbar">
         <div class="ucretsizhesap">
-            <a href="">🌐Ücretsiz Hesap</a>
+            <a href="">Ücretsiz Hesap</a>
         </div>
         <input type="checkbox" id="menuBtn">
         <label for="menuBtn" class="menuBtn">
