--- a/anasayfa.html
+++ b/anasayfa.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Ücretsiz Hesap</title>
-    <link rel="stylesheet" href="style.css">
+    <link  rel="stylesheet" href="style.css" rel="jaava" href="script.js">
 </head>
 <body>
+  <footer class="footer">
+  <p>&copy; Made By Berta</p>
+      </footer>
    <div class="container">
     <div class="navbar">
         <div class="ucretsizhesap">
@@ -18,7 +21,7 @@
             ≡
         </label>
         <ul>
-            <li><a href="anasayfa.html" class="active">⌂ Ana Sayfa</a></li>
+            <li><a href="anasayfa.html" class="active"></i>⌂ Ana Sayfa</a></li>
             <li><a href="disney.html" >Disney</a></li>
             <li><a href="netflix.html" >Netflix</a></li>
             <li><a href="method.html" >Method</a></li>
@@ -31,13 +34,15 @@
             <li><b>Paylaşılan hesaplara sağ üst köşedeki "Disney","Netflix","Method" ve daha</b></li>
             <li><b> fazla içerikleri görebilmek için karışık seçeneğine tıklayınız.</b></li>
             <li><b>İYİ FORUMLAR :D</b></li>
+
         </ol>
     </div>
+
     <div class="kutu2">
         <div class="baslik">Duyuru</div>
         <div class="ol">
             <p>Hesaplarin güncel olup olmadiini anlamak için yanindaki belirttiğimiz "**/**/**/ kısmından anlıyabilirsiniz.</p>
     </div>
+
 </body>
 </html> 
-
