--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="kutu2">
         <div class="baslik">Duyuru</div>
         <div class="ol">
-            <p>Hesaplarin güncel olup olmadiini anlamak için yanindaki belirttiğimiz "**/**/**/" kısmından anlıyabilirsiniz.</p>
+            <p>Hesaplarin güncel olup olmadiini anlamak için yanindaki belirttiğimiz " **/**/** " kısmından anlıyabilirsiniz.</p>
     </div>
 
 </body>
