--- a/magaza.html
+++ b/magaza.html
@@ -38,7 +38,7 @@
     <div class="kutu4">
         <div class="baslik"><img src="netflix.logo.png" alt="logo"></div>
         <div class="ol">
-            <h1><b>Netflix(cookie/account)</b></h1><br>
+            <h1><b>Netflix(cookie/ <br> account)</b></h1><br>
             <h4>Aylık üyelik: <i>25 ₺</i></h4>
             <P>İLETİŞİM: <a href="https://t.me/bedavahesapmethod">TELEGRAM</a></P>
           
