--- a/netflix.html
+++ b/netflix.html
@@ -26,6 +26,7 @@
             <li><a href="netflix.html" >Netflix</a></li>
             <li><a href="method.html" >Method</a></li>
             <li><a href="karısık.html">Karışık</a></li>
+            <li><a href="magaza.html">Mağaza</a></li>
         </ul>
     </div>
     <div class="kutu">
