--- a/anasayfa.html
+++ b/anasayfa.html
@@ -45,5 +45,11 @@
             <p>Hesaplarin güncel olup olmadiini anlamak için yanindaki belirttiğimiz " **/**/** " kısmından anlıyabilirsiniz.</p>
     </div>
 
+    <div class="kutu2">
+        <div class="baslik">Duyuru</div>
+        <div class="ol">
+            <p>Hesap satışlarımız başlamıştır <a href="magaza.html">MAĞAZA</a>.</p>
+    </div>
+
 </body>
 </html> 
