--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p>Hesaplarin güncel olup olmadiini anlamak için yanindaki belirttiğimiz " **/**/** " kısmından anlıyabilirsiniz.</p>
     </div>
 
-    <div class="kutu2">
+    <div class="kutuv2">
         <div class="baslik">Duyuru</div>
         <div class="ol">
             <p>Hesap satışlarımız başlamıştır <a href="magaza.html">MAĞAZA</a>.</p>
