--- a/magaza.html
+++ b/magaza.html
@@ -46,7 +46,7 @@
     </div>
 
     <div class="kutu5">
-        <div class="baslik"><img src="" alt="logo"></div>
+        <div class="baslik"><img src="-3.jpg" alt="logo"></div>
         <div class="ol">
             <h1><b>Blu Tv</b></h1><br>
             <h4>Aylık üyelik: <i>25 ₺</i></h4><br>
@@ -58,7 +58,7 @@
 
 
     <div class="kutu6">
-        <div class="baslik"><img src="valorantlogo.png" alt="logo"></div>
+        <div class="baslik"><img src="valologo4.jpg" alt="logo"></div>
         <div class="ol">
             <h1><b>Valorant</b></h1><br>
             <h4>Random hesap: <i>25 ₺</i></h4>
