--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="kutuv2">
         <div class="baslik">Duyuru</div>
         <div class="ol">
-            <p>Hesap satışlarımız başlamıştır <a href="magaza.html">MAĞAZA</a>.</p>
+            <p>Hesap satışlarımız başlamıştır <a href="magaza.html">→MAĞAZA</a>.</p>
     </div>
 
 </body>
