--- a/netflix.html
+++ b/netflix.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Netflix</title>
+    <link rel="icon" href="1453">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
