--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Ücretsiz Hesap</title>
     <link  rel="stylesheet" href="style.css" rel="jaava" href="script.js">
+    <link rel="icon" href="logoweb.png" type="image/x-icon">
 </head>
 <body>
   <footer class="footer">
