--- a/karısık.html
+++ b/karısık.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Karışık</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="logoweb.png" type="image/x-icon">
 </head>
 <body>
     <footer class="footer">
