--- a/magaza.html
+++ b/magaza.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Mağaza</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="logoweb.png" type="image/x-icon">
 </head>
 <body>
    <div class="container">
