--- a/disney.html
+++ b/disney.html
@@ -31,7 +31,7 @@
             </ul>
         </div>
         <div class="kutu">
-            <div class="baslik">Disney</div>
+            <div class="baslik"><img src="disney logo.jpg" alt=""></div>
             <div class="ol">
             <ol>
                 <li><b>DİSNEY HESAPLAR 5x</b> <i>18/06/23</i><a href="https://ay.live/spKMTv "> →TIKLA</a></p></li>
