--- a/netflix.html
+++ b/netflix.html
@@ -31,7 +31,7 @@
         </ul>
     </div>
     <div class="kutu">
-        <div class="baslik"><img src="netflix.html" alt=""></div>
+        <div class="baslik"><img src="netflix.logo.png" alt=""></div>
         <div class="ol">
         <ol>
             <li><p><b>NETLFİX COOKİE UHD</b> <i>18/06/23</i><a href="https://ay.live/U5Kf">→TIKLA</a> </p></li>
