--- a/karısık.html
+++ b/karısık.html
@@ -31,7 +31,7 @@
             </ul>
     </div>
     <div class="kutu">
-        <div class="baslik"><img src="karısıklogo2.png" alt=""></div>
+        <div class="baslik"><img src="karısıklogo2.jpg" alt=""></div>
         <div class="ol">
         <ol>
             <li><b>110xBLU TV </b><i>18/06/23</i><a href="https://ay.live/aX5D">→TIKLA</a></li>
