--- a/disney.html
+++ b/disney.html
@@ -6,42 +6,119 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Disney</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="logoweb.png" type="image/x-icon">
 </head>
 <body>
-    <footer class="footer">
-        <p>&copy; Made By Berta</p>
-            </footer>
    <div class="container">
-        <div class="navbar">
-            <div class="ucretsizhesap">
-                <a href="">Ücretsiz Hesap</a>
-            </div>
-            <input type="checkbox" id="menuBtn">
-            <label for="menuBtn" class="menuBtn">
-                ≡
-            </label>
-            <ul>
-                <li><a href="anasayfa.html" class="active">⌂ Ana Sayfa</a></li>
-                <li><a href="disney.html" >Disney</a></li>
-                <li><a href="netflix.html" >Netflix</a></li>
-                <li><a href="method.html" >Method</a></li>
-                <li><a href="karısık.html">Karışık</a></li>
-                <li><a href="magaza.html">Mağaza</a></li>
-            </ul>
+    <div class="navbar">
+        <div class="ucretsizhesap">
+            <a href="">Ücretsiz Hesap</a>
         </div>
-        <div class="kutu">
-            <div class="baslik"><img src="disney logo.jpg" alt=""></div>
-            <div class="ol">
-            <ol>
-                <li><b>DİSNEY HESAPLAR 5x</b> <i>18/06/23</i><a href="https://ay.live/spKMTv "> →TIKLA</a></p></li>
-                <li><b>DİSNEY HESAPLAR:</b> <i>13/06/23</i><a href=" https://ay.live/yJATa"> →TIKLA</a></p></li>
-                <li><b>DİSNEY HESAPLAR:</b> <i>13/06/23</i><a href="https://ay.live/aXusZ"> →TIKLA</a></p></li>
-                <li><b>DİSNEY HESAPLAR:</b> <i>13/06/23</i><a href=" https://ay.live/yJATa"> →TIKLA</a></p></li>
+        <input type="checkbox" id="menuBtn">
+        <label for="menuBtn" class="menuBtn">
+            ≡
+        </label>
+        <ul>
+            <li><a href="anasayfa.html" class="active">Ana Sayfa</a></li>
+            <li><a href="magaza.html">Mağaza</a></li>
+        </ul>
+    </div>
 
-            </ol>
-        </div>
-   </div>
+<div class="aciklama">
+    <h1>ÜCRETSİZ DİSNEY</h1><br><br>
+    <div class="ac">
+        <p>Ücretsiz Disney Hesap | paylaşım sitesi. Aktif gerçek Bedava Disney Hesaplar. Ücretsiz Disney senin için paylaşıyoruz. Para ödemeden istediğiniz kullanıcı adı ve şifreyi kullanın. Sitemiz sizden para istemez bütün Bedava Disney ücretsizdir. Aşağıda ki bütün kullanıcı ID ve Şifreleri deneyin eğer hesaplar çalışmaz ise hesap oluşturucu aracını kullanın bu araç size anlık hesap almanızı sağlar.
 
-</body>
+            Lütfen aldığınız hesapların şifrelerini değiştirmeyin, paylaştığımız bütün hesaplar bizim ve kullanıcıların paylaştığı Bedava Disney Hesaplardır. Sitemiz günlük olarak bütün hesapları otomatik yeniler ve kullanılmamış aktif çalışan Ücretsiz Disn Hesapları paylaşır yani her gün güncel Bedava Disney Hesap paylaşılır. Eğer hesaplar çalışmıyorsa 24 saat sonra tekrar sitemizi ziyaret edin inanın yeni aktif çalışan ücretsiz Disney Bedava Hesaplar seni bekliyor olacak.</p>
+    </div>
+</div>
+
+
+
+<table>
+    <tr>
+        <th>HESAP TÜRÜ</th>
+        <th>ADET</th>
+        <th>TARİH</th>
+        <th>LİNK</th>
+    </tr>
+
+    <tr>
+        <td><c>Disney</c></td>
+        <td><l>1x</l></td>
+        <td><d>13/06/23</d></td>
+        <td><a href="https://t.me/bedavahesapmethod">TELEGRAM</a></td>
+    </tr>
+
+    <tr>
+        <td><c>Disney</c></td>
+        <td><l>1x</l></td>
+        <td><d>13/06/23</d></td>
+        <td><a href="https://t.me/bedavahesapmethod">TELEGRAM</a></td>
+    </tr>
+
+    <tr>
+        <td><c>Disney</c></td>
+        <td><l>1x</l></td>
+        <td><d>13/06/23</d></td>
+        <td><a href="https://t.me/bedavahesapmethod">TELEGRAM</a></td>
+    </tr>
+    <tr>
+        <td><c>Disney</c></td>
+        <td><l>1x</l></td>
+        <td><d>13/06/23</d></td>
+        <td><a href="https://t.me/bedavahesapmethod">TELEGRAM</a></td>
+    </tr>
+    <tr>
+        <td><c>Disney</c></td>
+        <td><l>1x</l></td>
+        <td><d>13/06/23</d></td>
+        <td><a href="https://t.me/bedavahesapmethod">TELEGRAM</a></td>
+    </tr>
+    <tr>
+        <td><c>Disney</c></td>
+        <td><l>1x</l></td>
+        <td><d>13/06/23</d></td>
+        <td><a href="https://t.me/bedavahesapmethod">TELEGRAM</a></td>
+    </tr>
+    <tr>
+        <td><c>Disney</c></td>
+        <td><l>1x</l></td>
+        <td><d>13/06/23</d></td>
+        <td><a href="https://t.me/bedavahesapmethod">TIKLA </a></td>
+    </tr>
+    <tr>
+        <td><c>Disney</c></td>
+        <td><l>1x</l></td>
+        <td><d>13/06/23</d></td>
+        <td><a href="https://t.me/bedavahesapmethod">Tıkla</a></td>
+    </tr>
+    <tr>
+        <td><c>Disney</c></td>
+        <td><l>1x</l></td>
+        <td><d>13/06/23</d></td>
+        <td><a href="https://t.me/bedavahesapmethod">TELEGRAM</a></td>
+    </tr>
+    <tr>
+        <td><c>Disney</c></td>
+        <td><l>1x</l></td>
+        <td><d>13/06/23</d></td>
+        <td><a href="https://t.me/bedavahesapmethod">TELEGRAM</a></td>
+    </tr>
+    <tr>
+        <td><c>Disney</c></td>
+        <td><l>1x</l></td>
+        <td><d>13/06/23</d></td>
+        <td><a href="https://t.me/bedavahesapmethod">TELEGRAM</a></td>
+    </tr>
+    <tr>
+        <td><c>Disney</c></td>
+        <td><l>1x</l></td>
+        <td><d>13/06/23</d></td>
+        <td><a href="https://t.me/bedavahesapmethod">TELEGRAM</a></td>
+    </tr>
+
+
+
+
+</table>
 </html> 
