--- a/disney.html
+++ b/disney.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Disney</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="logoweb.png" type="image/x-icon">
 </head>
 <body>
    <div class="container">
@@ -40,13 +41,6 @@
         <th>ADET</th>
         <th>TARİH</th>
         <th>LİNK</th>
-    </tr>
-
-    <tr>
-        <td><c>Disney</c></td>
-        <td><l>1x</l></td>
-        <td><d>13/06/23</d></td>
-        <td><a href="https://t.me/bedavahesapmethod">TIKLA</a></td>
     </tr>
 
 
