--- a/method.html
+++ b/method.html
@@ -12,6 +12,9 @@
     <footer class="footer">
         <p>&copy; Made By Berta</p>
             </footer>
+    <footer class="footer">
+        <p>&copy; Made By Berta</p>
+            </footer>
    <div class="container">
     <div class="navbar">
         <div class="ucretsizhesap">
