--- a/magaza.html
+++ b/magaza.html
@@ -9,6 +9,9 @@
     <link rel="icon" href="logoweb.png" type="image/x-icon">
 </head>
 <body>
+    <footer class="footer">
+        <p>&copy; Made By Berta</p>
+            </footer>
    <div class="container">
     <div class="navbar">
         <div class="ucretsizhesap">
