--- a/disney.html
+++ b/disney.html
@@ -38,7 +38,7 @@
 
 
 
-<table>
+<table class="a">
     <tr>
         <th>HESAP TÜRÜ</th>
         <th>ADET</th>
@@ -68,6 +68,22 @@
         <td><a href="https://ay.live/yJATa">TIKLA</a></td>
     </tr><br><br>
 
+
+    <div class="aciklama2">
+        <h1><c>Disney Bedava Hesap </c></h1>
+        <div class="ac2">
+            <p>Disney, dünya genelindeki en büyük eğlence şirketlerinden biridir. Geçmişte yalnızca çizgi filmler ve animasyonlar üreten şirket, artık Marvel, Star Wars ve National Geographic gibi markaları da bünyesinde barındırıyor. Bu nedenle, Disney hayranları için harika bir haber var: Disney, bedava hesap sunuyor!</p><br>
+            <p>Bedava hesap, Disney+ adlı yayın hizmetinin bir parçasıdır. Disney+, platformun tüm içeriğine erişim sağlayan bir abonelik hizmeti olarak öne çıkıyor. Ancak, bedava hesap farklıdır. Bedava hesap sahipleri, sınırlı bir içerik kütüphanesine erişebilir ancak bu içerikler ücretsizdir.</p><br>
+            <p>Bedava hesap, Disney’in içeriklerini sevmeyen veya sadece Disney+’a kaydolmaya hazır olmayan insanlar için mükemmel bir seçenektir. Bir bedava hesap sahibi, Disney çizgi filmlerine, belgesellere ve diğer yapımlara göz atabilir. Tabii ki, sınırlı içerik kütüphanesi nedeniyle herhangi bir Marvel veya Star Wars içeriği bulamazsınız.</p><br>
+            <p>Ancak, bedava hesap sahipleri bile Disney+’ın sunduğu avantajlardan bazılarından yararlanabilir. Örneğin, çocukların seveceği Disney Channel ve Disney Junior kanallarının canlı yayınlarına erişim sağlayabilirsiniz. Ayrıca, bedava hesap sahipleri bile Disney+’ın sunduğu orijinal yapımlara göz atabilirler.</p> <br>
+            <p>Disney Bedava Hesap, herkesin ilgisini çeken harika bir fırsattır. Belki sınırlı içerik kütüphanesi nedeniyle tam anlamıyla Disney+’a kaydolmayı düşünmeyebilirsiniz, ancak yine de Disney hayranıysanız, ücretsiz bir hesabın avantajlarından yararlanabilirsiniz. Ya da belki Disney+’ı henüz denemediniz ama önce platformun ne sunduğunu görmek istiyorsunuz. Her durumda, Disney Bedava Hesap size mükemmel bir fırsat sunuyor!</p><br>
+
+
+
+        </div>
+
+
+    </div>
 
 
 
