--- a/disney.html
+++ b/disney.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Disney</title>
+    <title>Netflix</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="logoweb.png" type="image/x-icon">
 </head>
@@ -30,9 +30,9 @@
 <div class="aciklama">
     <h1>ÜCRETSİZ DİSNEY</h1><br><br>
     <div class="ac">
-        <p>Ücretsiz Disney Hesap | paylaşım sitesi. Aktif gerçek Bedava Disney Hesaplar. Ücretsiz Disney senin için paylaşıyoruz. Para ödemeden istediğiniz kullanıcı adı ve şifreyi kullanın. Sitemiz sizden para istemez bütün Bedava Disney ücretsizdir. Aşağıda ki bütün kullanıcı ID ve Şifreleri deneyin eğer hesaplar çalışmaz ise hesap oluşturucu aracını kullanın bu araç size anlık hesap almanızı sağlar.
+        <p>Ücretsiz Netflix Hesap | paylaşım sitesi. Aktif gerçek Bedava Netflix Hesaplar. Ücretsiz Netflix senin için paylaşıyoruz. Para ödemeden istediğiniz kullanıcı adı ve şifreyi kullanın. Sitemiz sizden para istemez bütün Bedava Netflix ücretsizdir. Aşağıda ki bütün kullanıcı ID ve Şifreleri deneyin eğer hesaplar çalışmaz ise hesap oluşturucu aracını kullanın bu araç size anlık hesap almanızı sağlar.
 
-            Lütfen aldığınız hesapların şifrelerini değiştirmeyin, paylaştığımız bütün hesaplar bizim ve kullanıcıların paylaştığı Bedava Disney Hesaplardır. Sitemiz günlük olarak bütün hesapları otomatik yeniler ve kullanılmamış aktif çalışan Ücretsiz Disn Hesapları paylaşır yani her gün güncel Bedava Disney Hesap paylaşılır. Eğer hesaplar çalışmıyorsa 24 saat sonra tekrar sitemizi ziyaret edin inanın yeni aktif çalışan ücretsiz Disney Bedava Hesaplar seni bekliyor olacak.</p>
+            Lütfen aldığınız hesapların şifrelerini değiştirmeyin, paylaştığımız bütün hesaplar bizim ve kullanıcıların paylaştığı Bedava Netflix Hesaplardır. Sitemiz günlük olarak bütün hesapları otomatik yeniler ve kullanılmamış aktif çalışan Ücretsiz Disn Hesapları paylaşır yani her gün güncel Bedava Netflix Hesap paylaşılır. Eğer hesaplar çalışmıyorsa 24 saat sonra tekrar sitemizi ziyaret edin inanın yeni aktif çalışan ücretsiz Netflix Bedava Hesaplar seni bekliyor olacak.</p>
     </div>
 </div>
 
@@ -48,21 +48,21 @@
 
 
     <tr>
-        <td><c>Disney</c></td>
+        <td><c>Netflix</c></td>
         <td><l>1x</l></td>
         <td><d>13/06/23</d></td>
         <td><a href="https://ay.live/yJATa">TIKLA</a></td>
     </tr>
 
     <tr>
-        <td><c>Disney</c></td>
+        <td><c>Netflix</c></td>
         <td><l>1x</l></td>
         <td><d>13/06/23</d></td>
         <td><a href="https://ay.live/aXusZ">TIKLA</a></td>
     </tr>
 
     <tr>
-        <td><c>Disney</c></td>
+        <td><c>Netflix</c></td>
         <td><l>1x</l></td>
         <td><d>13/06/23</d></td>
         <td><a href="https://ay.live/yJATa">TIKLA</a></td>
@@ -70,13 +70,13 @@
 
 
     <div class="aciklama2">
-        <h1><c>Disney Bedava Hesap </c></h1>
+        <h1><c>Disney Bedaba Hesap</c></h1>
         <div class="ac2">
-            <p>Disney, dünya genelindeki en büyük eğlence şirketlerinden biridir. Geçmişte yalnızca çizgi filmler ve animasyonlar üreten şirket, artık Marvel, Star Wars ve National Geographic gibi markaları da bünyesinde barındırıyor. Bu nedenle, Disney hayranları için harika bir haber var: Disney, bedava hesap sunuyor!</p><br>
-            <p>Bedava hesap, Disney+ adlı yayın hizmetinin bir parçasıdır. Disney+, platformun tüm içeriğine erişim sağlayan bir abonelik hizmeti olarak öne çıkıyor. Ancak, bedava hesap farklıdır. Bedava hesap sahipleri, sınırlı bir içerik kütüphanesine erişebilir ancak bu içerikler ücretsizdir.</p><br>
-            <p>Bedava hesap, Disney’in içeriklerini sevmeyen veya sadece Disney+’a kaydolmaya hazır olmayan insanlar için mükemmel bir seçenektir. Bir bedava hesap sahibi, Disney çizgi filmlerine, belgesellere ve diğer yapımlara göz atabilir. Tabii ki, sınırlı içerik kütüphanesi nedeniyle herhangi bir Marvel veya Star Wars içeriği bulamazsınız.</p><br>
-            <p>Ancak, bedava hesap sahipleri bile Disney+’ın sunduğu avantajlardan bazılarından yararlanabilir. Örneğin, çocukların seveceği Disney Channel ve Disney Junior kanallarının canlı yayınlarına erişim sağlayabilirsiniz. Ayrıca, bedava hesap sahipleri bile Disney+’ın sunduğu orijinal yapımlara göz atabilirler.</p> <br>
-            <p>Disney Bedava Hesap, herkesin ilgisini çeken harika bir fırsattır. Belki sınırlı içerik kütüphanesi nedeniyle tam anlamıyla Disney+’a kaydolmayı düşünmeyebilirsiniz, ancak yine de Disney hayranıysanız, ücretsiz bir hesabın avantajlarından yararlanabilirsiniz. Ya da belki Disney+’ı henüz denemediniz ama önce platformun ne sunduğunu görmek istiyorsunuz. Her durumda, Disney Bedava Hesap size mükemmel bir fırsat sunuyor!</p><br>
+            <p>Netflix, dünya genelindeki en büyük eğlence şirketlerinden biridir. Geçmişte yalnızca çizgi filmler ve animasyonlar üreten şirket, artık Marvel, Star Wars ve National Geographic gibi markaları da bünyesinde barındırıyor. Bu nedenle, Netflix hayranları için harika bir haber var: Netflix, bedava hesap sunuyor!</p><br>
+            <p>Bdava hesap, Netflix+ adlı yayın hizmetinin bir parçasıdır. Netflix+, platformun tüm içeriğine erişim sağlayan bir abonelik hizmeti olarak öne çıkıyor. Ancak, bedava hesap farklıdır. Bedava hesap sahipleri, sınırlı bir içerik kütüphanesine erişebilir ancak bu içerikler ücretsizdir.</p><br>
+            <p>Bedava hesap, Netflix’in içeriklerini sevmeyen veya sadece Netflix+’a kaydolmaya hazır olmayan insanlar için mükemmel bir seçenektir. Bir bedava hesap sahibi, Netflix çizgi filmlerine, belgesellere ve diğer yapımlara göz atabilir. Tabii ki, sınırlı içerik kütüphanesi nedeniyle herhangi bir Marvel veya Star Wars içeriği bulamazsınız.</p><br>
+            <p>Ancak, bedava hesap sahipleri bile Netflix+’ın sunduğu avantajlardan bazılarından yararlanabilir. Örneğin, çocukların seveceği Netflix Channel ve Netflix Junior kanallarının canlı yayınlarına erişim sağlayabilirsiniz. Ayrıca, bedava hesap sahipleri bile Netflix+’ın sunduğu orijinal yapımlara göz atabilirler.</p> <br>
+            <p>Netflix Bedava Hesap, herkesin ilgisini çeken harika bir fırsattır. Belki sınırlı içerik kütüphanesi nedeniyle tam anlamıyla Netflix+’a kaydolmayı düşünmeyebilirsiniz, ancak yine de Netflix hayranıysanız, ücretsiz bir hesabın avantajlarından yararlanabilirsiniz. Ya da belki Netflix+’ı henüz denemediniz ama önce platformun ne sunduğunu görmek istiyorsunuz. Her durumda, Netflix Bedava Hesap size mükemmel bir fırsat sunuyor!</p><br>
 
 
 
