--- a/netflix.html
+++ b/netflix.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Netflix</title>
-    <link rel="icon" href="logoweb.png" type="image/x-icon">
+    <title>Disney</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="logoweb.png" type="image/x-icon">
 </head>
 <body>
     <footer class="footer">
@@ -22,26 +22,71 @@
             ≡
         </label>
         <ul>
-            <li><a href="anasayfa.html" class="active">⌂ Ana Sayfa</a></li>
-            <li><a href="disney.html" >Disney</a></li>
-            <li><a href="netflix.html" >Netflix</a></li>
-            <li><a href="method.html" >Method</a></li>
-            <li><a href="karısık.html">Karışık</a></li>
+            <li><a href="anasayfa.html" class="active">Ana Sayfa</a></li>
             <li><a href="magaza.html">Mağaza</a></li>
         </ul>
     </div>
-    <div class="kutu">
-        <div class="baslik"><img src="netflix.logo.png" alt=""></div>
-        <div class="ol">
-        <ol>
-            <li><p><b>NETLFİX COOKİE UHD</b> <i>18/06/23</i><a href="https://ay.live/U5Kf">→TIKLA</a> </p></li>
-            <li><p><b>NETLFİX COOKİE</b> <i>13/06/23</i><a href="https://ay.live/m0SO">→TIKLA</a> </p></li>
-            <li><p><b>5000x NETLFİX COOKİE: </b><a href="https://ay.live/0bCPk">→TIKLA</a> </p></li>
-        </ol>
+
+<div class="aciklama">
+    <h1>ÜCRETSİZ NETLFİX</h1><br><br>
+    <div class="ac">
+        <p>Ücretsiz Disney Hesap | paylaşım sitesi. Aktif gerçek Bedava Disney Hesaplar. Ücretsiz Disney senin için paylaşıyoruz. Para ödemeden istediğiniz kullanıcı adı ve şifreyi kullanın. Sitemiz sizden para istemez bütün Bedava Disney ücretsizdir. Aşağıda ki bütün kullanıcı ID ve Şifreleri deneyin eğer hesaplar çalışmaz ise hesap oluşturucu aracını kullanın bu araç size anlık hesap almanızı sağlar.
+
+            Lütfen aldığınız hesapların şifrelerini değiştirmeyin, paylaştığımız bütün hesaplar bizim ve kullanıcıların paylaştığı Bedava Disney Hesaplardır. Sitemiz günlük olarak bütün hesapları otomatik yeniler ve kullanılmamış aktif çalışan Ücretsiz Disn Hesapları paylaşır yani her gün güncel Bedava Disney Hesap paylaşılır. Eğer hesaplar çalışmıyorsa 24 saat sonra tekrar sitemizi ziyaret edin inanın yeni aktif çalışan ücretsiz Disney Bedava Hesaplar seni bekliyor olacak.</p>
+    </div>
+</div>
+
+
+
+<table class="a">
+    <tr>
+        <th>HESAP TÜRÜ</th>
+        <th>ADET</th>
+        <th>TARİH</th>
+        <th>LİNK</th>
+    </tr>
+
+
+    <tr>
+        <td><c>NETLFİX COOKİE UHD</c></td>
+        <td><l>1x</l></td>
+        <td><d>13/06/23</d></td>
+        <td><a href="https://ay.live/U5Kf">TIKLA</a></td>
+    </tr>
+
+    <tr>
+        <td><c>NETLFİX COOKİE</c></td>
+        <td><l>1x</l></td>
+        <td><d>13/06/23</d></td>
+        <td><a href="https://ay.live/m0SO">TIKLA</a></td>
+    </tr>
+
+    <tr>
+        <td><c> NETLFİX COOKİE:</c></td>
+        <td><l>5000x</l></td>
+        <td><d>13/06/23</d></td>
+        <td><a href="https://ay.live/0bCPk">TIKLA</a></td>
+    </tr><br><br>
+
+
+    <div class="aciklama2">
+        <h1><c>Disney Bedava Hesap </c></h1>
+        <div class="ac2">
+            <p>Disney, dünya genelindeki en büyük eğlence şirketlerinden biridir. Geçmişte yalnızca çizgi filmler ve animasyonlar üreten şirket, artık Marvel, Star Wars ve National Geographic gibi markaları da bünyesinde barındırıyor. Bu nedenle, Disney hayranları için harika bir haber var: Disney, bedava hesap sunuyor!</p><br>
+            <p>Bedava hesap, Disney+ adlı yayın hizmetinin bir parçasıdır. Disney+, platformun tüm içeriğine erişim sağlayan bir abonelik hizmeti olarak öne çıkıyor. Ancak, bedava hesap farklıdır. Bedava hesap sahipleri, sınırlı bir içerik kütüphanesine erişebilir ancak bu içerikler ücretsizdir.</p><br>
+            <p>Bedava hesap, Disney’in içeriklerini sevmeyen veya sadece Disney+’a kaydolmaya hazır olmayan insanlar için mükemmel bir seçenektir. Bir bedava hesap sahibi, Disney çizgi filmlerine, belgesellere ve diğer yapımlara göz atabilir. Tabii ki, sınırlı içerik kütüphanesi nedeniyle herhangi bir Marvel veya Star Wars içeriği bulamazsınız.</p><br>
+            <p>Ancak, bedava hesap sahipleri bile Disney+’ın sunduğu avantajlardan bazılarından yararlanabilir. Örneğin, çocukların seveceği Disney Channel ve Disney Junior kanallarının canlı yayınlarına erişim sağlayabilirsiniz. Ayrıca, bedava hesap sahipleri bile Disney+’ın sunduğu orijinal yapımlara göz atabilirler.</p> <br>
+            <p>Disney Bedava Hesap, herkesin ilgisini çeken harika bir fırsattır. Belki sınırlı içerik kütüphanesi nedeniyle tam anlamıyla Disney+’a kaydolmayı düşünmeyebilirsiniz, ancak yine de Disney hayranıysanız, ücretsiz bir hesabın avantajlarından yararlanabilirsiniz. Ya da belki Disney+’ı henüz denemediniz ama önce platformun ne sunduğunu görmek istiyorsunuz. Her durumda, Disney Bedava Hesap size mükemmel bir fırsat sunuyor!</p><br>
+
+
+
+        </div>
+
 
     </div>
 
 
 
-</body>
+
+</table>
 </html> 
