--- a/disney.html
+++ b/disney.html
@@ -70,7 +70,7 @@
 
 
     <div class="aciklama2">
-        <h1><c>Disney Bedaba Hesap</c></h1>
+        <h1><c>Netflix Bedaba Hesap</c></h1>
         <div class="ac2">
             <p>Netflix, dünya genelindeki en büyük eğlence şirketlerinden biridir. Geçmişte yalnızca çizgi filmler ve animasyonlar üreten şirket, artık Marvel, Star Wars ve National Geographic gibi markaları da bünyesinde barındırıyor. Bu nedenle, Netflix hayranları için harika bir haber var: Netflix, bedava hesap sunuyor!</p><br>
             <p>Bdava hesap, Netflix+ adlı yayın hizmetinin bir parçasıdır. Netflix+, platformun tüm içeriğine erişim sağlayan bir abonelik hizmeti olarak öne çıkıyor. Ancak, bedava hesap farklıdır. Bedava hesap sahipleri, sınırlı bir içerik kütüphanesine erişebilir ancak bu içerikler ücretsizdir.</p><br>
