--- a/disney.html
+++ b/disney.html
@@ -71,8 +71,8 @@
 
     <div class="aciklama2">
         <h1><c>Netflix Bedaba Hesap</c></h1>
-        <div class="ac2">
-            <p>Netflix, dünya genelindeki en büyük eğlence şirketlerinden biridir. Geçmişte yalnızca çizgi filmler ve animasyonlar üreten şirket, artık Marvel, Star Wars ve National Geographic gibi markaları da bünyesinde barındırıyor. Bu nedenle, Netflix hayranları için harika bir haber var: Netflix, bedava hesap sunuyor!</p><br>
+        <div class="ac3">
+            <p>Netfli, dünya genelindeki en büyük eğlence şirketlerinden biridir. Geçmişte yalnızca çizgi filmler ve animasyonlar üreten şirket, artık Marvel, Star Wars ve National Geographic gibi markaları da bünyesinde barındırıyor. Bu nedenle, Netflix hayranları için harika bir haber var: Netflix, bedava hesap sunuyor!</p><br>
             <p>Bdava hesap, Netflix+ adlı yayın hizmetinin bir parçasıdır. Netflix+, platformun tüm içeriğine erişim sağlayan bir abonelik hizmeti olarak öne çıkıyor. Ancak, bedava hesap farklıdır. Bedava hesap sahipleri, sınırlı bir içerik kütüphanesine erişebilir ancak bu içerikler ücretsizdir.</p><br>
             <p>Bedava hesap, Netflix’in içeriklerini sevmeyen veya sadece Netflix+’a kaydolmaya hazır olmayan insanlar için mükemmel bir seçenektir. Bir bedava hesap sahibi, Netflix çizgi filmlerine, belgesellere ve diğer yapımlara göz atabilir. Tabii ki, sınırlı içerik kütüphanesi nedeniyle herhangi bir Marvel veya Star Wars içeriği bulamazsınız.</p><br>
             <p>Ancak, bedava hesap sahipleri bile Netflix+’ın sunduğu avantajlardan bazılarından yararlanabilir. Örneğin, çocukların seveceği Netflix Channel ve Netflix Junior kanallarının canlı yayınlarına erişim sağlayabilirsiniz. Ayrıca, bedava hesap sahipleri bile Netflix+’ın sunduğu orijinal yapımlara göz atabilirler.</p> <br>
